--- a/SAM_UI/SAM.Core.UI/SAM.Core.UI.csproj
+++ b/SAM_UI/SAM.Core.UI/SAM.Core.UI.csproj
@@ -16,6 +16,12 @@
     <OutputPath>..\..\build\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Enums\**" />
+    <EmbeddedResource Remove="Enums\**" />
+    <None Remove="Enums\**" />
+    <Page Remove="Enums\**" />
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="SAM.Core">
       <HintPath>..\..\..\SAM\build\SAM.Core.dll</HintPath>
     </Reference>
@@ -26,8 +32,5 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.3</Version>
     </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Enums\" />
   </ItemGroup>
 </Project>
