fix paths and removing dump .exe

--- a/Application/SAM Analytical Mollier/SAM Analytical Mollier.csproj
+++ b/Application/SAM Analytical Mollier/SAM Analytical Mollier.csproj
@@ -8,6 +8,8 @@
     <OutputPath>..\..\build\</OutputPath>
 	  <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 	  <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+    <SelfContained>true</SelfContained>
+    <PublishSingleFile>true</PublishSingleFile>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>SAM.ico</ApplicationIcon>
