--- a/Grasshopper/SAM.Analytical.UI.Grasshopper/SAM.Analytical.UI.Grasshopper.csproj
+++ b/Grasshopper/SAM.Analytical.UI.Grasshopper/SAM.Analytical.UI.Grasshopper.csproj
@@ -83,6 +83,7 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.3</Version>
     </PackageReference>
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Mollier\SAM.Core.Mollier.UI\SAM.Core.Mollier.UI.csproj" />
