--- a/.github/workflows/spdx-check.yml
+++ b/.github/workflows/spdx-check.yml
@@ -6,39 +6,82 @@ on:
 jobs:
   spdx:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: read
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Check header in changed .cs files
+      - name: Check SPDX + copyright header in changed .cs files
+        env:
+          GH_TOKEN: ${{ github.token }}
+          PR: ${{ github.event.pull_request.number }}
+          REPO: ${{ github.repository }}
+          HEAD_SHA: ${{ github.event.pull_request.head.sha }}
+        shell: bash
         run: |
-          set -e
-          BASE="${{ github.event.pull_request.base.sha }}"
-          HEAD="${{ github.event.pull_request.head.sha }}"
+          set -euo pipefail
 
-          FILES=$(git diff --name-only "$BASE" "$HEAD" -- '*.cs' || true)
+          echo "Repo: $REPO"
+          echo "PR: $PR"
+          echo "Head SHA: $HEAD_SHA"
+          echo ""
 
-          if [ -z "$FILES" ]; then
+          mapfile -t files < <(
+            gh api "repos/$REPO/pulls/$PR/files" --paginate \
+              --jq '.[] | .filename | select(endswith(".cs"))'
+          )
+
+          if [ "${#files[@]}" -eq 0 ]; then
             echo "No C# files changed."
             exit 0
           fi
 
-          MISSING=""
-          for f in $FILES; do
-            HEADBLOCK=$(head -n 6 "$f")
+          echo "C# files changed in PR:"
+          printf ' - %s\n' "${files[@]}"
+          echo ""
 
-            echo "$HEADBLOCK" | grep -q "// SPDX-License-Identifier: LGPL-3.0-or-later" || MISSING="$MISSING $f"
-            echo "$HEADBLOCK" | grep -q "// Copyright (c) 2020–2026 Michal Dengusiak & Jakub Ziolkowski and contributors" || MISSING="$MISSING $f"
+          spdx_re='SPDX-License-Identifier:[[:space:]]*LGPL-3\.0-or-later'
+          cr_re='Copyright[[:space:]]*\(c\)[[:space:]]*2020[[:space:]]*[-–—][[:space:]]*2026[[:space:]]*Michal[[:space:]]+Dengusiak[[:space:]]*&[[:space:]]*Jakub[[:space:]]+Ziolkowski[[:space:]]+and[[:space:]]+contributors'
+
+          missing=()
+
+          for f in "${files[@]}"; do
+            echo "Checking: $f"
+
+            content_b64=$(gh api "repos/$REPO/contents/$f?ref=$HEAD_SHA" --jq '.content' 2>/dev/null || true)
+            if [ -z "$content_b64" ]; then
+              echo "  ❌ Could not fetch file content (deleted? submodule? path issue)"
+              missing+=("$f (unreadable)")
+              continue
+            fi
+
+            # Decode fully first (avoids SIGPIPE/broken pipe with pipefail),
+            # normalize CRLF, then take first 80 lines.
+            decoded=$(printf '%s' "$content_b64" | base64 -d)
+            headblock=$(printf '%s' "$decoded" | tr -d '\r' | head -n 80)
+
+            if ! printf '%s' "$headblock" | grep -Eiq "$spdx_re"; then
+              echo "  ❌ Missing SPDX line in first 80 lines"
+              missing+=("$f (SPDX)")
+              continue
+            fi
+
+            if ! printf '%s' "$headblock" | grep -Eiq "$cr_re"; then
+              echo "  ❌ Missing copyright line in first 80 lines"
+              missing+=("$f (Copyright)")
+              continue
+            fi
+
+            echo "  ✅ OK"
           done
 
-          if [ -n "$MISSING" ]; then
+          echo ""
+          if [ "${#missing[@]}" -ne 0 ]; then
             echo "❌ Missing required header in:"
-            for f in $MISSING; do echo " - $f"; done
+            printf ' - %s\n' "${missing[@]}"
             echo ""
-            echo "Each changed .cs file must start with:"
+            echo "Expected somewhere in first 80 lines:"
             echo "// SPDX-License-Identifier: LGPL-3.0-or-later"
-            echo "// Copyright (c) 2020–2025 Michal Dengusiak & Jakub Ziolkowski and contributors"
+            echo "// Copyright (c) 2020-2026 Michal Dengusiak & Jakub Ziolkowski and contributors"
             exit 1
           fi
 
