--- a/.github/workflows/spdx-check.yml
+++ b/.github/workflows/spdx-check.yml
@@ -54,10 +54,10 @@ jobs:
               continue
             fi
 
-            # Decode fully first (avoids SIGPIPE/broken pipe with pipefail),
-            # normalize CRLF, then take first 80 lines.
+            # Decode fully first, normalize CRLF, then take first 80 lines (no SIGPIPE with pipefail)
             decoded=$(printf '%s' "$content_b64" | base64 -d)
-            headblock=$(printf '%s' "$decoded" | tr -d '\r' | head -n 80)
+            headblock=$(printf '%s' "$decoded" | tr -d '\r' | sed -n '1,80p')
+
 
             if ! printf '%s' "$headblock" | grep -Eiq "$spdx_re"; then
               echo "  ❌ Missing SPDX line in first 80 lines"
